<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leetoxavi.bms.MenuActivity">


    <RelativeLayout
        android:id="@+id/menu_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/menu_list_header"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/menu_header"
            android:gravity="center"/>

        <TabHost
            android:id="@+id/menu_tab_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu_list_header"
            android:layout_above="@+id/selection_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <GridView
                            android:id="@+id/meal_grid_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:numColumns="auto_fit"
                            android:columnWidth="86dp"
                            android:stretchMode="columnWidth"
                            >
                        </GridView>

                        <GridView
                            android:id="@+id/drink_grid_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:numColumns="auto_fit"
                            android:columnWidth="86dp"
                            android:stretchMode="columnWidth"
                            >
                        </GridView>


                        <GridView
                            android:id="@+id/dessert_grid_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:numColumns="auto_fit"
                            android:columnWidth="86dp"
                            android:stretchMode="columnWidth"
                            >
                        </GridView>

                </FrameLayout>
            </LinearLayout>
        </TabHost>

        <RelativeLayout
            android:id="@+id/selection_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_above="@+id/order_button"

            >

                <TextView
                    android:id="@+id/selected_meal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_toStartOf="@+id/selected_drink"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/meal_selection"/>
                <TextView
                    android:id="@+id/selected_drink"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:text="@string/drink_selection"/>
                <TextView
                    android:id="@+id/selected_dessert"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_toEndOf="@+id/selected_drink"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/dessert_selection"/>
        </RelativeLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:text="@string/order_action"/>



    </RelativeLayout>

</RelativeLayout>
